feat: add pi2 server

--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,7 @@ port: "/dev/ttyACM0"
 baudrate: 9600
 detecturl: "http://192.168.1.101:8000/photo"
 #detecturl: "http://127.0.0.1:8000/photo"
+pi2url: "http://192.168.1.107:8000/photo"
 machineid: "demo"
 password: "123456"
 doorpin: 16
